<resources>
    <string name="app_name">BigIntsRedux</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_header">BigInts Redux</string>
    <string name="main_activity_title">Big Integer Calculator</string>
    <string name="field_one_name">Enter the first number</string>
    <string name="operator">Select operator</string>
    <string-array name="operator_array">
        <item>+</item>
        <item>-</item>
        <item>*</item>
    </string-array>
    <string name="field_two_name">Enter the second number</string>
    <string name="button_one_name">Calculate</string>
    <string name="button_two_name">Clear</string>
    <string name="solution_field">Solution</string>
    <string name="button_three_name">Copy solution to field one</string>
    <string name="button_four_name">Copy solution to field two</string>
    <string name="button_five_name">Copy solution as text</string>
</resources>